# Granular_Sim2Sim

./: .gitignore  .nojekyll  Makefile  README.md  excavation_policy_with_property_prediction.md  experiment_pipeline.md  index.html  install.sh  mujoco_mpm_cosim.py  newton_first_plan.md  probe_mjwarp_granular.py  pyproject.toml  render_franka_granular_interaction.py  rendering_environment.md  reproducibility.md  requirements.txt  reviewer_audit.md  sim2sim_property_validation.md  warp_sand_mpm.py  warp_sand_mpm_coupled.py  wild_material_robustness_paper.md
configs/: external_assets.json  newton_bridge_heightfield.json  sand3d_blade_demo.json
constraints/: reference-linux-py310-cu128.txt
docs/: 3d_granular_mpm_research_basis.md  experiment_pipeline.md  index.html  multimodal_mohr_coulomb_architecture.md  property_estimation_performance_upgrade_notes.md  reproducibility.md
scripts/: analyze_sweep_scatter.py  build_project_page_media.py  composite_franka_on_density.py  package_demo_artifacts.py  render_blender_interaction_teaser.py  render_density_franka_two_view_overlay.py  render_density_mujoco_eef_projection.py  render_density_mujoco_eef_render.py  render_density_projected_eef_overlay.py  render_excavation_policy_compare.py  render_rollout_property_overlay.py  render_sim2sim_property_compare.py  reproduce_demo_bundle.sh  run_3d_blade_demo.py  run_3d_density_render_demo.py  run_experiment_sequence.py  run_mujoco_3d_mpm_composite.py  run_mujoco_3d_mpm_cosim.py  run_mujoco_newton_mpm_bridge.py  run_newton_mpm_spike.py  run_property_sweep.py  run_wild_review_audit.py  (+3 more)
(+60 files in other folders)
